--- a/src/styles/navbar.less
+++ b/src/styles/navbar.less
@@ -4,8 +4,8 @@
 
 .navbar {
   width: 100%;
-  padding: .6em 0 .8em;
-  position: fixed;
+  padding: .6em 1em .8em;
+  position: absolute;
   top: 0;
   z-index: 1;
   background-color: #262728;
