--- a/src/styles/posts.less
+++ b/src/styles/posts.less
@@ -3,9 +3,9 @@
 */
 
 .posts {
-  max-width:575px;
+  max-width: 600px;
   margin: 0 auto;
-  padding: 1em 0;
+  padding: 1em;
 }
 
 .posts--list-view {
